--- a/electron/package.json
+++ b/electron/package.json
@@ -3,13 +3,18 @@
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
-  },
-  "dependencies": {
-    "electron": "^24.0.0"
+    "start": "electron .",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "electron": "^35.0.1"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.7"
+  }
 }
+
