--- a/electron/package.json
+++ b/electron/package.json
@@ -18,6 +18,7 @@
     "tailwindcss": "^3.4.17"
   },
   "dependencies": {
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "node-fetch": "^2.7.0"
   }
 }
