--- a/electron/python/requirements.txt
+++ b/electron/python/requirements.txt
@@ -36,7 +36,7 @@ syncedlyrics==1.0.1
 text-unidecode==1.3
 typing_extensions==4.12.2
 Unidecode==1.3.8
-urllib3==2.2.3
+urllib3<2.0
 uvicorn==0.23.2
 wrapt==1.16.0
 yt-dlp==2024.11.4
