--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,11 @@ jobs:
         working-directory: electron
         run: npm ci
 
+      - name: Test notarytool credentials
+        run: |
+          echo "Testing notarytool authentication..."
+          xcrun notarytool history --apple-id "${{ secrets.APPLE_ID }}" --password "${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}" --team-id "${{ secrets.APPLE_TEAM_ID }}" 2>&1 || true
+
       - name: Build and publish
         working-directory: electron
         env:
